fix sticky behavior on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,13 +43,6 @@ iframe, .commentsContainer {
   border: 3px solid #CCCCCC;
 }
 
-.centerSpinner {
-  position: absolute;
-  top: 31vh;
-  left: 50%;
-  transform: translate(740%, -50%);
-}
-
 .iframe-loading {
   opacity: 0;
   animation: fadeOut 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
@@ -104,4 +97,10 @@ iframe, .commentsContainer {
 .spinner-loading {
   opacity: 1;
   transition: opacity 200ms;
+}
+
+@media (max-width: 767px) {
+  .sticky-container {
+    height: 100vh;
+  }
 }
